2001-03-27  Andy Hertzfeld  <andy@eazel.com>

	fixed problem with annotation canvas item not updating properly
	by changing how it manages its bounds.  Also, removed some
	debugging statements.
	
	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(nautilus_canvas_note_item_init), (get_bounds),
	(nautilus_canvas_note_item_set_note_text),
	(nautilus_canvas_note_item_set_arg),
	(nautilus_canvas_note_item_get_arg),
	(nautilus_canvas_note_item_translate),
	(nautilus_canvas_note_item_bounds),
	(nautilus_canvas_note_item_render),
	(nautilus_canvas_note_item_draw),
	(nautilus_canvas_note_item_point),
	(nautilus_canvas_note_item_update):
	
	* libnautilus-extensions/nautilus-canvas-note-item.h:
	* libnautilus-extensions/nautilus-icon-canvas-item.c:
	(create_annotation):

2001-03-27  Andy Hertzfeld  <andy@eazel.com>

	added fm-annotation-window class for adding and editing
	annotations; only partially implemented at this point.

	* src/file-manager/Makefile.am:
	* src/file-manager/fm-annotation-window.c:
	(fm_annotation_window_initialize_class),
	(fm_annotation_window_initialize),
	(update_annotation_window_title), (create_annotation_window),
	(fm_annotation_window_present), (real_destroy):
	* src/file-manager/fm-annotation-window.h:
	* src/file-manager/fm-icon-view.c: (annotate_callback):

2001-03-26  Andy Hertzfeld  <andy@eazel.com>

	added frame to rss-control, and made it periodically update,
	reflecting the last update time in the upper right corner.
	
	* components/rss-control/nautilus-rss-control.c:
	(nautilus_rss_control_initialize_class),
	(nautilus_rss_control_initialize), (nautilus_rss_control_destroy),
	(rss_read_done_callback), (check_for_update),
	(draw_rss_logo_image), (nautilus_rss_control_draw):

2001-03-26  Andy Hertzfeld  <andy@eazel.com>

	fix some miscellaneous glitches in the tab indicator stuff
	
	* src/nautilus-sidebar-tabs.c: (tab_item_destroy):
	make sure there still is a control before accessing it