@@ -3,7 +3,7 @@
 /* fm-annotation-window.h - interface for window that lets user add and edit
    file annotations.          
 
-   Copyright (C) 2000 Eazel, Inc.
+   Copyright (C) 2001 Eazel, Inc.
 
    The Gnome Library is free software; you can redistribute it and/or
    modify it under the terms of the GNU Library General Public License as
