@@ -1,5 +1,15 @@
 2001-03-27  Andy Hertzfeld  <andy@eazel.com>
 
+	* src/file-manager/fm-annotation-window.c:
+	(fm_annotation_window_initialize), (real_destroy),
+	(create_annotation_window), (fm_annotation_window_present):
+	* src/file-manager/fm-annotation-window.h:
+
+	some more work on the file annotation window; still have
+	a lot more to go.
+	
+2001-03-27  Andy Hertzfeld  <andy@eazel.com>
+
 	fixed problem with annotation canvas item not updating properly
 	by changing how it manages its bounds.  Also, removed some
 	debugging statements.
